Bug 165850 - Plasma crash when adding widget to new containment
Summary: Plasma crash when adding widget to new containment
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: containment-desktop (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 12:51 UTC by Bernhard Friedreich
Modified: 2008-10-31 16:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
plasmarc (629 bytes, application/octet-stream)
2008-07-06 12:51 UTC, Bernhard Friedreich
Details
plasma-appletsrc (3.69 KB, application/octet-stream)
2008-07-06 12:52 UTC, Bernhard Friedreich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Friedreich 2008-07-06 12:51:00 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          g++ (SUSE Linux) 4.3.2 20080613 (prerelease) [gcc-4_3-branch revision 136744] 
OS:                Linux

Setup:
2 containments (all have widgets)

Steps to reproduce:
-) add 3rd containment
(you can't scroll to the previous ones anymore until you zoom in and out again (but that's another bug ^^))
-) add a macos widget (in my case gmail) to the 3rd containment (while zoomed out)
-) try to move it around (still zoomed out) (I've tried to grab it on the applet handle)
-) crash

Backtrace:

Application: Plasma Workspace (plasma), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[New Thread 0xaf88fb90 (LWP 14918)]
[New Thread 0xb0090b90 (LWP 8666)]
[New Thread 0xb1fbbb90 (LWP 8664)]
[New Thread 0xb27bcb90 (LWP 8663)]
[KCrash handler]
#6  0xb656d26e in QGraphicsView::d_func (this=0x0)
    at graphicsview/qgraphicsview.h:269
#7  0xb6562bf0 in QGraphicsView::mapFromScene (this=0x0, point=@0xbfc063c0)
    at graphicsview/qgraphicsview.cpp:1958
#8  0xb7eeaf9a in Plasma::AppletHandle::mousePressEvent (this=0x8b6e0b8, 
    event=0xbfc06afc)
    at /kde/src/KDE/kdebase/workspace/libs/plasma/applethandle.cpp:288
#9  0xb6540a2c in QGraphicsItem::sceneEvent (this=0x8b6e0c0, event=0xbfc06afc)
    at graphicsview/qgraphicsitem.cpp:3864
#10 0xb654b358 in QGraphicsScenePrivate::sendEvent (this=0x80cf488, 
    item=0x8b6e0c0, event=0xbfc06afc) at graphicsview/qgraphicsscene.cpp:1046
#11 0xb654e39c in QGraphicsScenePrivate::sendMouseEvent (this=0x80cf488, 
    mouseEvent=0xbfc06afc) at graphicsview/qgraphicsscene.cpp:1117
#12 0xb655621d in QGraphicsScenePrivate::mousePressEventHandler (
    this=0x80cf488, mouseEvent=0xbfc06afc)
    at graphicsview/qgraphicsscene.cpp:1206
#13 0xb65564ac in QGraphicsScene::mousePressEvent (this=0x80f90a0, 
    mouseEvent=0xbfc06afc) at graphicsview/qgraphicsscene.cpp:3546
#14 0xb6555236 in QGraphicsScene::event (this=0x80f90a0, event=0xbfc06afc)
    at graphicsview/qgraphicsscene.cpp:2987
#15 0xb5f98389 in QApplicationPrivate::notify_helper (this=0x807c5b0, 
    receiver=0x80f90a0, e=0xbfc06afc) at kernel/qapplication.cpp:3772
#16 0xb5f9869e in QApplication::notify (this=0x8076768, receiver=0x80f90a0, 
    e=0xbfc06afc) at kernel/qapplication.cpp:3366
#17 0xb79cf78f in KApplication::notify (this=0x8076768, receiver=0x80f90a0, 
    event=0xbfc06afc) at /kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#18 0xb6b432e7 in QCoreApplication::notifyInternal (this=0x8076768, 
    receiver=0x80f90a0, event=0xbfc06afc) at kernel/qcoreapplication.cpp:583
#19 0xb708a5f7 in QCoreApplication::sendEvent (receiver=0x80f90a0, 
    event=0xbfc06afc)
    at ../../../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#20 0xb656a1c7 in QGraphicsView::mousePressEvent (this=0x84b8fb0, 
    event=0xbfc072d4) at graphicsview/qgraphicsview.cpp:2570
#21 0xb5ff4492 in QWidget::event (this=0x84b8fb0, event=0xbfc072d4)
    at kernel/qwidget.cpp:6923
#22 0xb6357ab2 in QFrame::event (this=0x84b8fb0, e=0xbfc072d4)
    at widgets/qframe.cpp:657
#23 0xb63ed6c5 in QAbstractScrollArea::viewportEvent (this=0x84b8fb0, 
    e=0xbfc072d4) at widgets/qabstractscrollarea.cpp:941
#24 0xb6563b91 in QGraphicsView::viewportEvent (this=0x84b8fb0, 
    event=0xbfc072d4) at graphicsview/qgraphicsview.cpp:2267
#25 0xb63f01da in QAbstractScrollAreaPrivate::viewportEvent (this=0x84c2998, 
    event=0xbfc072d4) at widgets/qabstractscrollarea_p.h:102
#26 0xb63f0208 in QAbstractScrollAreaFilter::eventFilter (this=0x84c3438, 
    o=0x846d858, e=0xbfc072d4) at widgets/qabstractscrollarea_p.h:113
#27 0xb6b416b8 in QCoreApplicationPrivate::sendThroughObjectEventFilters (
    this=0x807c5b0, receiver=0x846d858, event=0xbfc072d4)
    at kernel/qcoreapplication.cpp:694
#28 0xb5f98366 in QApplicationPrivate::notify_helper (this=0x807c5b0, 
    receiver=0x846d858, e=0xbfc072d4) at kernel/qapplication.cpp:3768
#29 0xb5f98f07 in QApplication::notify (this=0x8076768, receiver=0x846d858, 
    e=0xbfc072d4) at kernel/qapplication.cpp:3501
#30 0xb79cf78f in KApplication::notify (this=0x8076768, receiver=0x846d858, 
    event=0xbfc072d4) at /kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#31 0xb6b432e7 in QCoreApplication::notifyInternal (this=0x8076768, 
    receiver=0x846d858, event=0xbfc072d4) at kernel/qcoreapplication.cpp:583
#32 0xb5fa41c3 in QCoreApplication::sendSpontaneousEvent (receiver=0x846d858, 
    event=0xbfc072d4)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#33 0xb5f9ccd0 in QApplicationPrivate::sendMouseEvent (receiver=0x846d858, 
    event=0xbfc072d4, alienWidget=0x846d858, nativeWidget=0x84b8fb0, 
    buttonDown=0xb668e980, lastMouseReceiver=@0xb668e984)
    at kernel/qapplication.cpp:2766
#34 0xb60128be in QETWidget::translateMouseEvent (this=0x84b8fb0, 
    event=0xbfc077c0) at kernel/qapplication_x11.cpp:4133
#35 0xb60135e3 in QApplication::x11ProcessEvent (this=0x8076768, 
    event=0xbfc077c0) at kernel/qapplication_x11.cpp:3133
#36 0xb603c9c5 in x11EventSourceDispatch (s=0x807f398, callback=0, 
    user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#37 0xb57e7462 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0xb57ea9cb in ?? () from /usr/lib/libglib-2.0.so.0
#39 0xb57eab48 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0xb6b70f32 in QEventDispatcherGlib::processEvents (this=0x807b6b8, flags=
      {i = -1077905016}) at kernel/qeventdispatcher_glib.cpp:325
#41 0xb603c1e0 in QGuiEventDispatcherGlib::processEvents (this=0x807b6b8, 
    flags={i = -1077904968}) at kernel/qguieventdispatcher_glib.cpp:204
#42 0xb6b40308 in QEventLoop::processEvents (this=0xbfc07a30, flags=
      {i = -1077904908}) at kernel/qeventloop.cpp:149
#43 0xb6b40545 in QEventLoop::exec (this=0xbfc07a30, flags={i = -1077904840})
    at kernel/qeventloop.cpp:196
#44 0xb6b43ae3 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#45 0xb5f980a2 in QApplication::exec () at kernel/qapplication.cpp:3304
#46 0xb7fceaad in kdemain (argc=1, argv=0xbfc07bd4)
    at /kde/src/KDE/kdebase/workspace/plasma/plasma/main.cpp:54
#47 0x08048846 in main (argc=12, argv=0x8aa7800)
    at /kde/build/KDE/kdebase/workspace/plasma/plasma/plasma-qgv_dummy.cpp:3
Comment 1 Bernhard Friedreich 2008-07-06 12:51:51 UTC
Created attachment 25872 [details]
plasmarc
Comment 2 Bernhard Friedreich 2008-07-06 12:52:21 UTC
Created attachment 25873 [details]
plasma-appletsrc
Comment 3 Marco Martin 2008-07-06 15:01:29 UTC
SVN commit 828716 by mart:

check if the applet pointer has been resetted to 0 by switchContainment

BUG: 165850


 M  +13 -2     applethandle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828716
Comment 4 JP Rosevear 2008-10-31 16:28:52 UTC
This fix may not be solving the problem, see bug 170850