check if the applet pointer has been resetted to 0 by switchContainment

BUG: 165850

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=828716